# core_xlsx

./: .cz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml
core_py/: CHANGELOG.md  Cargo.toml  pyproject.toml
core_py/examples/: add_sheet.py  apply_helper_class.py  apply_helper_dict.py  iter_cells.py  merged_cells.py
core_py/python/core_xlsx/: __init__.py  _core_xlsx.pyi
core_py/src/: helper.rs  lib.rs  services.rs  types.rs
core_rs/: Cargo.toml
core_rs/examples/: add_xlsx_sheet.rs  find_cells.rs  find_sheet.rs  merged_cells.rs  remove_cells.rs
core_rs/src/: datatype.rs  helper.rs  lib.rs  types.rs  utils.rs
