[workspace]
members = ["core_py", "core_rs"]

resolver = "2"

[workspace.package]
description = "Core functionality for XLSX"
version = "0.1.1"
edition = "2021"

authors = ["Alexandr Starovoitov <stalex.info@yandex.ru>"]

readme = "README.md"
homepage = "https://github.com/stalexsm/core_xlsx.git"
repository = "https://github.com/stalexsm/core_xlsx.git"

[workspace.dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
